reportbug (4.1) UNRELEASED; urgency=low

  [ Sandro Tosi ]
  * reportbug/__init__.py
    - bump version
  * debian/{desktop, dirs, rules}
    - install desktop file; thanks to Fabian Greffrath for the report and file;
      Closes: #521186

  [ Luca Bruno ]
  * bin/reportbug
    - fix default when choosing for realname and email at configuration time
    - offer interface configuration on explicit configuration or when no
      interface is being specified (the used interface is set as default)
  * reportbug/debianbts.py
    - use ui proper functions instead of ewrite; thanks to Jan Hauke Rahm for
      the report; Closes: #521113
  * reportbug/ui/gtk2_ui.py
    - added VTE to handle bugscripts and mutt
    - support for spell checking in the bug report editor
    - fix display_failure handling
    - make BTS query tree columns sortable
    - ui layout improvements
  * debian/control
    - added suggests for python-vte and python-gnome2-extras (for spell check)
  * debian/copyright, reportbug/ui/gtk2_ui.py
    - bump copyright years

 -- Sandro Tosi <morph@debian.org>  Thu, 26 Mar 2009 00:23:11 +0100

reportbug (4.0) unstable; urgency=low

  * Uploading to unstable, since Lenny has been released
  * reportbug/__init__.py
    - updated version number
  * conf/reportbug.conf, debian/rules
    - moved reportbug.conf to conf/ dir
  * share/{handle_bugscript, presubj, reportbug.el, script}, setup.py
    - moved files installed in /usr/share/... into share/ to clean up top level
      directory
  * reportbug/test_hiermatch.py, test/test_hiermatch.py
    - removed reportbug/test_hiermatch.py, partially merget into
      test/test_hiermatch.py
  * bin/*, reportbug/*, reportbug/ui/*, debian/copyright
    - updated copyright information, in particular adding me 
  * reportbug/urlutils.py
    - added a timeout of 1 minute for url retrieving; thanks to Michal Suchanek
      for the report; Closes: 516449
  * debian/{control, rules}