@@ -1,7 +1,4 @@
 #!/usr/bin/make -f
-# Made with the aid of dh_make, by Craig Small -*- makefile -*-
-# Sample debian/rules that uses debhelper. GNU copyright 1997 by Joey Hess.
-# Some lines taken from debmake, by Cristoph Lameter.
 
 # Uncomment this to turn on verbose mode.
 #export DH_VERBOSE=1
@@ -23,7 +20,6 @@ build-stamp:
 clean:
 	dh_testdir
 	dh_testroot
-	rm -f build-stamp install-stamp
 
 	# Add here commands to clean up after the build process.
 	rm -rf `find . -name '*~' -o -name '.#*' -o -name '*.orig' -o -name '*.rej' -o -name '*.py[co]'` sed-script
@@ -55,34 +51,21 @@ binary-arch: build install
 
 # Build architecture-independent files here.
 binary-indep: build install
-#	dh_testversion
 	dh_testdir
 	dh_testroot
 	dh_installdocs
-	dh_installexamples
 	dh_installmenu
 	dh_desktop
-#	dh_installemacsen
-#	dh_installinit
-	dh_installcron
 	dh_installman man/*
-#	dh_undocumented
 	dh_installchangelogs
-	dh_link
-	dh_strip
 	dh_compress
 	dh_fixperms
 	dh_pysupport
-#	dh_python
 	dh_installdeb
 	dh_shlibdeps
 	dh_gencontrol
-#	dh_makeshlibs
 	dh_md5sums
 	dh_builddeb
-
-source diff:
-	@echo >&2 'source and diff are obsolete - use dpkg-source -b'; false
 
 binary: binary-indep binary-arch
 .PHONY: build clean binary-indep binary-arch binary
